# hs-format

./: .gitignore  Makefile  format.cabal  main.hs  test.hs
Text/: Format.hs  Format.lhs
