name:                format
version:             0.1.0.0
synopsis:            Rendering from and scanning to format strings
description:         Rendering from and scanning to simple format strings
homepage:            https://github.com/bytbox/hs-format
license:             MIT
license-file:        LICENSE
author:              Scott Lawrence
maintainer:          bytbox@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Text.Format
  build-depends:       base ==4.5.*, parsec ==3.1.*
